--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,16 @@ name = "mina-graphql-rs"
 version = "0.1.0"
 edition = "2018"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.74"
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3"
+async-std =  "1.9"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+tokio-test = "0.4"
+
 [dependencies]
 anyhow = "1.0.39"
 graphql_client = "0.9.0"
@@ -11,3 +21,5 @@ serde_derive = "1.0"
 serde_json = "1.0"
 reqwest = { version = "0.11.3", features = ["json", "blocking"] }
 log = "0.4"
+rust_decimal = "1.14"
+rust_decimal_macros = "1.14"
