--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ reqwest = { version = "0.11.3", features = ["json", "blocking"] }
 log = "0.4"
 rust_decimal = "1.14"
 rust_decimal_macros = "1.14"
+chrono = { version = "0.4", features = [ "serde" ] }
